--- a/aiopyramid/scaffolds/aio_websocket/+package+/templates/home.jinja2
+++ b/aiopyramid/scaffolds/aio_websocket/+package+/templates/home.jinja2
@@ -29,7 +29,7 @@
 
     function onOpen(evt) {
       writeToScreen("CONNECTED");
-      doSend("WebSocket rocks");
+      doSend("Aiopyramid echo test.");
     }
 
     function onClose(evt) {
